@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-08-03T02:14:03Z",
+  "timestamp" : "2022-08-03T08:31:24Z",
   "count_outdated" : 703,
   "uniques_outdated" : 366,
-  "count" : 737,
+  "count" : 736,
   "uniques" : 383,
   "clones" : [
     {
       "timestamp": "2022-07-20T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "count_minmax": [ 1, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ]
