@@ -1,3 +1,10 @@
+2022-08-03T08:31:24Z:
+* notice: last 14d: unq all: 4 33
+* notice: prev accum: outdated-unq outdated-all / unq all: 366 703 / 383 737
+* notice: next accum: outdated-unq outdated-all / unq all: 366 703 / 383 736
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +2 +3 -0 -1 / 2 2
+* notice: removed / changed dates: [] / [2022-07-20]
+
 2022-08-03T02:14:03Z:
 * notice: last 14d: unq all: 4 34
 * notice: prev accum: outdated-unq outdated-all / unq all: 366 703 / 383 736
